# eda-mp3

./: .gitignore  CMakeLists.txt  README.md  eda-mp3_en_US.ts  hurts_auii.txt  library.cpp  library.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_deprecated.cpp  mainwindow_deprecated.h  queue.cpp  queue.h  vcpkg.json
icons/: resources.qrc
resources/: resources.qrc  style.qss
src/backend/: libraryManager.cpp  libraryManager.h  metaDataHelper.cpp  metaDataHelper.h  player.cpp  player.h  playlist.cpp  playlist.h  playlistManager.cpp  playlistManager.h  queueManager.cpp  queueManager.h  song.cpp  song.h
src/frontend/: addtoplaylist.cpp  addtoplaylist.h  addtoplaylist.ui  addtoplaylistdialog.cpp  addtoplaylistdialog.h  addtoplaylistdialog.ui  controls.cpp  controls.h  controls.ui  createplaylistdialog.cpp  createplaylistdialog.h  createplaylistdialog.ui  editor.cpp  editor.h  editor.ui  editorsong.cpp  editorsong.h  editorsong.ui  library.cpp  library.h  library.ui  librarysong.cpp  librarysong.h  librarysong.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  playlistinlist.cpp  playlistinlist.h  playlistinlist.ui  playlists.cpp  playlists.h  playlists.ui  queue.cpp  queue.h  queue.ui  queuesong.cpp  queuesong.h  queuesong.ui  songtoplaylistdialog.cpp  (+7 more)
